made ol align to center, fixed the display question bug, and fixed penality and score bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,13 @@ header {
 	height: fit-content;
 }
 
+.score-list{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+}
+
 /* Sets styling for main section */
 main {
 	display: flex;
